added readme, some maintenance